# postech-tech-challenges-fase-2

./: .gitignore  README.md  main.py  pyproject.toml  relatorio-tecnico.md
data/: synthetic_data.py
experimentos/experimento-1/: llm_responses.json  manual_equipe.txt  roteiro_visitas.txt  route_map.html
experimentos/experimento-2/: llm_responses.json  manual_equipe.txt  roteiro_visitas.txt  route_map.html
experimentos/experimento-3/: llm_responses.json  manual_equipe.txt  roteiro_visitas.txt  route_map.html
llm/: report_generator.py
projeto_vrp.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
visualization/: map_viz.py
vrp/: fitness.py  genetic_algorithm.py  waze_adapter.py
